Disabled upload file

--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -333,7 +333,7 @@ See https://github.com/adobe-type-tools/cmap-resources
           class="secondaryToolbar hidden doorHangerRight"
         >
           <div id="secondaryToolbarButtonContainer">
-            <button
+            <!-- <button
               id="secondaryOpenFile"
               class="secondaryToolbarButton visibleLargeView"
               title="Open File"
@@ -341,7 +341,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               data-l10n-id="open_file"
             >
               <span data-l10n-id="open_file_label">Open</span>
-            </button>
+            </button> -->
 
             <button
               id="secondaryPrint"
@@ -636,7 +636,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                 <span id="numPages" class="toolbarLabel"></span>
               </div>
               <div id="toolbarViewerRight">
-                <button
+                <!-- <button
                   id="openFile"
                   class="toolbarButton hiddenLargeView"
                   title="Open File"
@@ -644,7 +644,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   data-l10n-id="open_file"
                 >
                   <span data-l10n-id="open_file_label">Open</span>
-                </button>
+                </button> -->
 
                 <button
                   id="print"
