--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -41,6 +41,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     <script src="../build/pdf.js"></script>
 
     <script src="viewer.js"></script>
+    <script src="customToolbar.js"></script>
   </head>
 
   <body tabindex="1">
