--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -46,7 +46,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
   <body tabindex="1">
     <div id="outerContainer">
-      <div id="sidebarContainer">
+      <div id="leftSidebarContainer">
         <div id="toolbarSidebar">
           <div id="toolbarSidebarLeft">
             <div
@@ -134,7 +134,96 @@ See https://github.com/adobe-type-tools/cmap-resources
         </div>
         <div id="sidebarResizer"></div>
       </div>
-      <!-- sidebarContainer -->
+      <!-- leftSidebarContainer -->
+
+      <div id="rightSidebarContainer">
+        <div id="toolbarSidebar">
+          <div id="toolbarSidebarLeft">
+            <div
+              id="sidebarViewButtons"
+              class="splitToolbarButton toggled"
+              role="radiogroup"
+            >
+              <button
+                id="viewThumbnail"
+                class="toolbarButton toggled"
+                title="Show Thumbnails"
+                tabindex="2"
+                data-l10n-id="thumbs"
+                role="radio"
+                aria-checked="true"
+                aria-controls="thumbnailView"
+              >
+                <span data-l10n-id="thumbs_label">Thumbnails</span>
+              </button>
+              <button
+                id="viewOutline"
+                class="toolbarButton"
+                title="Show Document Outline (double-click to expand/collapse all items)"
+                tabindex="3"
+                data-l10n-id="document_outline"
+                role="radio"
+                aria-checked="false"
+                aria-controls="outlineView"
+              >
+                <span data-l10n-id="document_outline_label"
+                  >Document Outline</span
+                >
+              </button>
+              <button
+                id="viewAttachments"
+                class="toolbarButton"
+                title="Show Attachments"
+                tabindex="4"
+                data-l10n-id="attachments"
+                role="radio"
+                aria-checked="false"
+                aria-controls="attachmentsView"
+              >
+                <span data-l10n-id="attachments_label">Attachments</span>
+              </button>
+              <button
+                id="viewLayers"
+                class="toolbarButton"
+                title="Show Layers (double-click to reset all layers to the default state)"
+                tabindex="5"
+                data-l10n-id="layers"
+                role="radio"
+                aria-checked="false"
+                aria-controls="layersView"
+              >
+                <span data-l10n-id="layers_label">Layers</span>
+              </button>
+            </div>
+          </div>
+
+          <div id="toolbarSidebarRight">
+            <div id="outlineOptionsContainer" class="hidden">
+              <div class="verticalToolbarSeparator"></div>
+
+              <button
+                id="currentOutlineItem"
+                class="toolbarButton"
+                disabled="disabled"
+                title="Find Current Outline Item"
+                tabindex="6"
+                data-l10n-id="current_outline_item"
+              >
+                <span data-l10n-id="current_outline_item_label"
+                  >Current Outline Item</span
+                >
+              </button>
+            </div>
+          </div>
+        </div>
+        <div id="sidebarContent">
+          <div id="thumbnailView"></div>
+          <div id="outlineView" class="hidden"></div>
+          <div id="attachmentsView" class="hidden"></div>
+          <div id="layersView" class="hidden"></div>
+        </div>
+        <div id="sidebarResizer"></div>
+      </div>
 
       <div id="mainContainer">
         <div class="findbar hidden doorHanger" id="findbar">
@@ -584,7 +673,7 @@ See https://github.com/adobe-type-tools/cmap-resources
                   tabindex="11"
                   data-l10n-id="toggle_sidebar"
                   aria-expanded="false"
-                  aria-controls="sidebarContainer"
+                  aria-controls="leftSidebarContainer"
                 >
                   <span data-l10n-id="toggle_sidebar_label"
                     >Toggle Sidebar</span
@@ -699,6 +788,46 @@ See https://github.com/adobe-type-tools/cmap-resources
                     <span data-l10n-id="editor_ink2_label">Draw</span>
                   </button>
                 </div>
+
+                <button
+                  id="referenceDetails"
+                  class="toolbarButton"
+                  title="Reference Details"
+                  role="radio"
+                  aria-checked="false"
+                  tabindex="36"
+                  data-l10n-id="reference_details1"
+                >
+                  <span data-l10n-id="reference_details1_label"
+                    >Open Reference Details</span
+                  >
+                </button>
+
+                <button
+                  id="knowledgeGraph"
+                  class="toolbarButton"
+                  title="Knowledge graph"
+                  role="radio"
+                  aria-checked="false"
+                  tabindex="36"
+                  data-l10n-id="knowledge_graph1"
+                >
+                  <span data-l10n-id="knowledge_graph1_label"
+                    >Open Knowledge Graph</span
+                  >
+                </button>
+
+                <button
+                  id="summary"
+                  class="toolbarButton"
+                  title="Summary"
+                  role="radio"
+                  aria-checked="false"
+                  tabindex="36"
+                  data-l10n-id="summary1"
+                >
+                  <span data-l10n-id="summary1_label">Open Summary</span>
+                </button>
 
                 <div
                   id="editorModeSeparator"
