--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -104,7 +104,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               >
                 <span data-l10n-id="layers_label">Layers</span>
               </button>
-              <div class="verticalToolbarSeparator hiddenMediumView"></div>
+              <div class="verticalSidebarToolbarSeparator"></div>
               <button
                 id="referenceDetails"
                 class="toolbarButton"
