enabled switching between tools

--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -172,9 +172,9 @@ See https://github.com/adobe-type-tools/cmap-resources
           <div id="outlineView" class="hidden"></div>
           <div id="attachmentsView" class="hidden"></div>
           <div id="layersView" class="hidden"></div>
-          <div id="referenceView" class="hidden"></div>
-          <div id="knowledgeGraphView" class="hidden"></div>
-          <div id="summaryView" class="hidden"></div>
+          <div id="referenceDetailsView" class="hidden">reference details</div>
+          <div id="knowledgeGraphView" class="hidden">knowledge graph</div>
+          <div id="summaryView" class="hidden">summary</div>
         </div>
         <div id="sidebarResizer"></div>
       </div>
