injected react components to pdfjs sidebar

--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -42,6 +42,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <script src="viewer.js"></script>
     <script src="customToolbar.js"></script>
+    <script src="importStyles.js"></script>
   </head>
 
   <body tabindex="1">
@@ -172,9 +173,9 @@ See https://github.com/adobe-type-tools/cmap-resources
           <div id="outlineView" class="hidden"></div>
           <div id="attachmentsView" class="hidden"></div>
           <div id="layersView" class="hidden"></div>
-          <div id="referenceDetailsView" class="hidden">reference details</div>
-          <div id="knowledgeGraphView" class="hidden">knowledge graph</div>
-          <div id="summaryView" class="hidden">summary</div>
+          <div id="referenceDetailsView" class="hidden"></div>
+          <div id="knowledgeGraphView" class="hidden"></div>
+          <div id="summaryView" class="hidden"></div>
         </div>
         <div id="sidebarResizer"></div>
       </div>
