--- a/public/web/viewer.html
+++ b/public/web/viewer.html
@@ -46,7 +46,7 @@ See https://github.com/adobe-type-tools/cmap-resources
   </head>
 
   <body tabindex="1">
-    <div id="outerContainer">
+    <div id="outerContainer" class="sidebarClosed">
       <div id="sidebarContainer">
         <div id="toolbarSidebar">
           <div id="toolbarSidebarLeft">
@@ -54,100 +54,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               id="sidebarViewButtons"
               class="splitToolbarButton toggled"
               role="radiogroup"
-            >
-              <button
-                id="viewThumbnail"
-                class="toolbarButton toggled"
-                title="Show Thumbnails"
-                tabindex="2"
-                data-l10n-id="thumbs"
-                role="radio"
-                aria-checked="true"
-                aria-controls="thumbnailView"
-              >
-                <span data-l10n-id="thumbs_label">Thumbnails</span>
-              </button>
-              <button
-                id="viewOutline"
-                class="toolbarButton"
-                title="Show Document Outline (double-click to expand/collapse all items)"
-                tabindex="3"
-                data-l10n-id="document_outline"
-                role="radio"
-                aria-checked="false"
-                aria-controls="outlineView"
-              >
-                <span data-l10n-id="document_outline_label"
-                  >Document Outline</span
-                >
-              </button>
-              <button
-                id="viewAttachments"
-                class="toolbarButton"
-                title="Show Attachments"
-                tabindex="4"
-                data-l10n-id="attachments"
-                role="radio"
-                aria-checked="false"
-                aria-controls="attachmentsView"
-              >
-                <span data-l10n-id="attachments_label">Attachments</span>
-              </button>
-              <button
-                id="viewLayers"
-                class="toolbarButton"
-                title="Show Layers (double-click to reset all layers to the default state)"
-                tabindex="5"
-                data-l10n-id="layers"
-                role="radio"
-                aria-checked="false"
-                aria-controls="layersView"
-              >
-                <span data-l10n-id="layers_label">Layers</span>
-              </button>
-              <div class="verticalSidebarToolbarSeparator"></div>
-              <button
-                id="referenceDetails"
-                class="toolbarButton"
-                title="Show Reference View"
-                tabindex="5"
-                data-l10n-id="reference-details"
-                role="radio"
-                aria-checked="false"
-                aria-controls="referenceDetailsView"
-              >
-                <span data-l10n-id="reference_details_label"
-                  >Reference Details</span
-                >
-              </button>
-              <button
-                id="knowledgeGraph"
-                class="toolbarButton"
-                title="Show Knowledge Graph"
-                tabindex="5"
-                data-l10n-id="knowledgeGraph"
-                role="radio"
-                aria-checked="false"
-                aria-controls="knowledgeGraphView"
-                disabled
-              >
-                <span data-l10n-id="knowledge_graph_label"
-                  >Knowledge Graph</span
-                >
-              </button>
-              <button
-                id="summary"
-                class="toolbarButton"
-                title="Show Summary"
-                tabindex="5"
-                data-l10n-id="summary"
-                role="radio"
-                aria-checked="false"
-                aria-controls="summaryView"
-              >
-                <span data-l10n-id="summary_label">Summary</span>
-              </button>
-            </div>
+            ></div>
           </div>
 
           <div id="toolbarSidebarRight">
@@ -386,6 +293,7 @@ See https://github.com/adobe-type-tools/cmap-resources
               title="Open File"
               tabindex="51"
               data-l10n-id="open_file"
+              style="display: none"
             >
               <span data-l10n-id="open_file_label">Open</span>
             </button>
@@ -631,10 +539,110 @@ See https://github.com/adobe-type-tools/cmap-resources
                   data-l10n-id="toggle_sidebar"
                   aria-expanded="false"
                   aria-controls="sidebarContainer"
+                  style="display: none"
                 >
                   <span data-l10n-id="toggle_sidebar_label"
                     >Toggle Sidebar</span
                   >
+                </button>
+                <button
+                  id="viewThumbnail"
+                  class="toolbarButton sidebarToolButton toggled active"
+                  title="Show Thumbnails"
+                  tabindex="12"
+                  data-l10n-id="thumbs"
+                  data-sidebar-page="thumbnailView"
+                  role="radio"
+                  aria-checked="true"
+                  aria-controls="thumbnailView"
+                >
+                  <span data-l10n-id="thumbs_label">Thumbnails</span>
+                </button>
+                <button
+                  id="viewOutline"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Document Outline (double-click to expand/collapse all items)"
+                  tabindex="13"
+                  data-l10n-id="document_outline"
+                  data-sidebar-page="outlineView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="outlineView"
+                >
+                  <span data-l10n-id="document_outline_label"
+                    >Document Outline</span
+                  >
+                </button>
+                <button
+                  id="viewAttachments"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Attachments"
+                  tabindex="14"
+                  data-l10n-id="attachments"
+                  data-sidebar-page="attachmentsView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="attachmentsView"
+                >
+                  <span data-l10n-id="attachments_label">Attachments</span>
+                </button>
+                <button
+                  id="viewLayers"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Layers (double-click to reset all layers to the default state)"
+                  tabindex="15"
+                  data-l10n-id="layers"
+                  data-sidebar-page="layersView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="layersView"
+                >
+                  <span data-l10n-id="layers_label">Layers</span>
+                </button>
+                <div class="verticalSidebarToolbarSeparator"></div>
+                <button
+                  id="referenceDetailsToolbarButton"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Reference View"
+                  tabindex="16"
+                  data-l10n-id="reference-details"
+                  data-sidebar-page="referenceDetailsView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="referenceDetailsView"
+                >
+                  <span data-l10n-id="reference_details_label"
+                    >Reference Details</span
+                  >
+                </button>
+                <button
+                  id="knowledgeGraphToolbarButton"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Knowledge Graph"
+                  tabindex="16"
+                  data-l10n-id="knowledgeGraph"
+                  data-sidebar-page="knowledgeGraphView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="knowledgeGraphView"
+                  disabled
+                >
+                  <span data-l10n-id="knowledge_graph_label"
+                    >Knowledge Graph</span
+                  >
+                </button>
+                <button
+                  id="summaryToolbarButton"
+                  class="toolbarButton sidebarToolButton"
+                  title="Show Summary"
+                  tabindex="16"
+                  data-l10n-id="summary"
+                  data-sidebar-page="summaryView"
+                  role="radio"
+                  aria-checked="false"
+                  aria-controls="summaryView"
+                >
+                  <span data-l10n-id="summary_label">Summary</span>
                 </button>
                 <div class="toolbarButtonSpacer"></div>
                 <button
